Fix for z-index of image overlay

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ nav > ul > li > a:hover, .dropdown:hover > a {
     height: 355px;
 }
 img.overlay    {
-    z-index: 10000;
+    z-index: 100;
     position: absolute;
     top: 0;
     right: 0;
